Remove --illegal-access=deny on JDK17+
Motivation:

--illegal-access=deny was removed in JDK17

Modifications:

Remove --illegal-access=deny from cmdline

Result:

Cleanup